<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ai.NearAuth</groupId>
	<artifactId>authentication-mod</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>NearAuth.ai</name>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<!-- This tells Maven which Java version to use when compiling -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>

			<!-- This is what sets up the WAR file properly -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${war-plugin.version}</version>
				<configuration>
					<outputDirectory>dist</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
					</archive>
					<webResources>
						<resource>
							<directory>src/main/resources/lib</directory>
							<targetPath>WEB-INF/lib</targetPath>
						</resource>
					</webResources>
					<warSourceDirectory>WebContent</warSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.owasp</groupId>
		        <artifactId>dependency-check-maven</artifactId>
		        <version>12.2.0</version>
		        <configuration>
                    <nvdApiKey>${nvd.api.key}</nvdApiKey>
                </configuration>
		        <executions>
		          <execution>
		            <goals>
		              <goal>check</goal>
		            </goals>
		          </execution>
		        </executions>
		      </plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>shibboleth</id>
			<url>https://build.shibboleth.net/maven/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${org-json-json.version}</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>${json-simple.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<!--<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${apache-commons.version}</version>
		</dependency>-->
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-jdbc</artifactId>
			<version>${spring-session-jdbc.version}</version>
		</dependency>
		<dependency>
			<groupId>ldapsdk</groupId>
			<artifactId>ldapsdk</artifactId>
			<version>${ldapsdk.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.httpcomponents.core5</groupId>
		    <artifactId>httpcore5</artifactId>
		    <version>${httpcore.version}</version>
		    <scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons-codec.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons-text.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>
		<dependency>
			<groupId>com.twilio.sdk</groupId>
			<artifactId>twilio</artifactId>
			<version>${twilio.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
			<version>${jakarta-mail-api.version}</version>
		</dependency>
		<dependency>
		    <groupId>jakarta.servlet</groupId>
		    <artifactId>jakarta.servlet-api</artifactId>
		    <version>${jakarta-servlet-api.version}</version>
		    <scope>provided</scope>
    	</dependency>
		<dependency>
		    <groupId>jakarta.servlet.jsp.jstl</groupId>
		    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
		    <version>${jakarta.servlet.jsp.jstl-api.version}</version>
		</dependency>
		<!-- JSTL Implementation -->
		<dependency>
		    <groupId>org.glassfish.web</groupId>
		    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
		    <version>${jakarta.servlet.jsp.jstl.version}</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql-connector.version}</version>
		</dependency>
		<dependency>
			<groupId>com.webauthn4j</groupId>
			<artifactId>webauthn4j-core</artifactId>
			<version>${webauthn4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.webauthn4j</groupId>
			<artifactId>webauthn4j-test</artifactId>
			<version>${webauthn4j.version}</version>
		</dependency>
		<!--<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>opensaml-core</artifactId>
			<version>${opensaml.version}</version>
		</dependency>-->
		<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>opensaml-saml-api</artifactId>
			<version>${opensaml.version}</version>
		</dependency>
		<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>opensaml-saml-impl</artifactId>
			<version>${opensaml.version}</version>
		</dependency>
		<!--<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>opensaml-messaging-api</artifactId>
			<version>${opensaml.version}</version>
			<scope>compile</scope>
		</dependency>-->
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>${nimbus-jose-jwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt-api.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt-impl.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt-jackson.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>tools.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson-core.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>tools.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson-annotations.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda-time.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jini</groupId>
			<artifactId>sun-util</artifactId>
			<version>${jni.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.auth</groupId>
			<artifactId>google-auth-library-oauth2-http</artifactId>
			<version>${google-auth-library-oauth2-http.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.firebase</groupId>
			<artifactId>firebase-admin</artifactId>
			<version>${firebase-admin.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>${HikariCP.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		
	</dependencies>
	<!-- Environment Settings -->
	<properties>
		<bouncycastle.version>1.83</bouncycastle.version>
		<commons-codec.version>1.21.0</commons-codec.version>
		<commons-io.version>2.21.0</commons-io.version>
		<commons-lang3.version>3.20.0</commons-lang3.version>
		<commons-text.version>1.15.0</commons-text.version>
		<compiler-plugin.version>3.15.0</compiler-plugin.version>
		<faster-jackson.version>2.21.0</faster-jackson.version>
		<firebase-admin.version>9.8.0</firebase-admin.version>
		<google-auth-library-oauth2-http.version>1.43.0</google-auth-library-oauth2-http.version>
		<gson.version>2.13.2</gson.version>
		<guava.version>33.5.0-jre</guava.version>
		<HikariCP.version>7.0.2</HikariCP.version>
		<httpcore.version>5.4.1</httpcore.version>
		<jackson-annotations.version>2.21</jackson-annotations.version>
		<jackson-databind.version>3.1.0</jackson-databind.version>
		<jackson-core.version>3.1.0</jackson-core.version>
		<jakarta-mail-api.version>2.1.5</jakarta-mail-api.version>
		<jakarta-servlet-api.version>6.0.0</jakarta-servlet-api.version>
		<jakarta.servlet.jsp.jstl-api.version>3.0.2</jakarta.servlet.jsp.jstl-api.version>
		<jakarta.servlet.jsp.jstl.version>3.0.1</jakarta.servlet.jsp.jstl.version>
		<jdk.version>17</jdk.version>
		<jjwt.version>0.13.1</jjwt.version>
		<jjwt-api.version>0.13.0</jjwt-api.version>
		<jjwt-impl.version>0.13.0</jjwt-impl.version>
		<jjwt-jackson.version>0.13.0</jjwt-jackson.version>
		<jni.version>2.1</jni.version>
		<joda-time.version>2.14.0</joda-time.version>
		<json-simple.version>1.1.1</json-simple.version>
		<junit.version>6.0.3</junit.version>
		<ldapsdk.version>4.1</ldapsdk.version>
		<mysql-connector.version>9.6.0</mysql-connector.version>
		<nimbus-jose-jwt.version>10.8</nimbus-jose-jwt.version>
        <nvd.api.key>${env.NVD_API_KEY}</nvd.api.key>
        <opensaml.version>5.2.1</opensaml.version>
        <org-json-json.version>20251224</org-json-json.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>7.0.5</spring.version>
		<springboot.version>4.0.3</springboot.version>
		<spring-session-jdbc.version>4.0.2</spring-session-jdbc.version>
		<twilio.version>11.3.4</twilio.version>
		<war-plugin.version>3.5.1</war-plugin.version>
		<webauthn4j.version>0.31.1.RELEASE</webauthn4j.version>
		
	</properties>
</project>